feat: JPA Refactoring